tools/cleansentence.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { utterance: peg$parseutterance },
      peg$startRuleFunction  = peg$parseutterance,

      peg$c0 = function(s) { return s; },
      peg$c1 = function(s, ep) { return s + ' ' + ep; },
      peg$c2 = function(c) { return c; },
      peg$c3 = function(p) { return p; },
      peg$c4 = "aujourd'hui",
      peg$c5 = peg$literalExpectation("aujourd'hui", false),
      peg$c6 = function() { return "aujourd'hui"; },
      peg$c7 = "entr'ouvrir",
      peg$c8 = peg$literalExpectation("entr'ouvrir", false),
      peg$c9 = function() { return "entr'ouvrir"; },
      peg$c10 = "d'abord",
      peg$c11 = peg$literalExpectation("d'abord", false),
      peg$c12 = function() { return "d'abord"; },
      peg$c13 = function(m) { return m; },
      peg$c14 = function(n) { return n; },
      peg$c15 = function(o) { return o; },
      peg$c16 = function(g) { return g; },
      peg$c17 = "+<",
      peg$c18 = peg$literalExpectation("+<", false),
      peg$c19 = "+,",
      peg$c20 = peg$literalExpectation("+,", false),
      peg$c21 = "+^",
      peg$c22 = peg$literalExpectation("+^", false),
      peg$c23 = "[",
      peg$c24 = peg$literalExpectation("[", false),
      peg$c25 = "]",
      peg$c26 = peg$literalExpectation("]", false),
      peg$c27 = function(ci, c, cf) { return [ci + c.join('') + cf]; },
      peg$c28 = "\u27E6",
      peg$c29 = peg$literalExpectation("\u27E6", false),
      peg$c30 = "\u27E7",
      peg$c31 = peg$literalExpectation("\u27E7", false),
      peg$c32 = "\u2045",
      peg$c33 = peg$literalExpectation("\u2045", false),
      peg$c34 = "\u2046",
      peg$c35 = peg$literalExpectation("\u2046", false),
      peg$c36 = "\u231C",
      peg$c37 = peg$literalExpectation("\u231C", false),
      peg$c38 = "\u231F",
      peg$c39 = peg$literalExpectation("\u231F", false),
      peg$c40 = "<pause",
      peg$c41 = peg$literalExpectation("<pause", false),
      peg$c42 = ">",
      peg$c43 = peg$literalExpectation(">", false),
      peg$c44 = "<incident",
      peg$c45 = peg$literalExpectation("<incident", false),
      peg$c46 = "<seg>",
      peg$c47 = peg$literalExpectation("<seg>", false),
      peg$c48 = function(ci) { return [ci]; },
      peg$c49 = "</seg>",
      peg$c50 = peg$literalExpectation("</seg>", false),
      peg$c51 = function(go) { return ['⌉']; },
      peg$c52 = "\u27EB",
      peg$c53 = peg$literalExpectation("\u27EB", false),
      peg$c54 = "<",
      peg$c55 = peg$literalExpectation("<", false),
      peg$c56 = function(gi) { return ['⌈']; },
      peg$c57 = "\u27EA",
      peg$c58 = peg$literalExpectation("\u27EA", false),
      peg$c59 = function(initial, milieu, fin) { return [initial + reste.join('')] + fin; },
      peg$c60 = " ",
      peg$c61 = peg$literalExpectation(" ", false),
      peg$c62 = /^[']/,
      peg$c63 = peg$classExpectation(["'"], false, false),
      peg$c64 = function(initial, mot, w, apos) { return [initial + mot.join('') + "'"]; },
      peg$c65 = function(mot) { return [mot.join('')]; },
      peg$c66 = function(initial, apos) { return [initial + apos]; },
      peg$c67 = function(initial, reste, apos) { return [initial + reste.join('') + apos]; },
      peg$c68 = function(initial, reste) { return [initial + reste.join('')]; },
      peg$c69 = /^[\-+0-9]/,
      peg$c70 = peg$classExpectation(["-", "+", ["0", "9"]], false, false),
      peg$c71 = /^[0-9\-+()*]/,
      peg$c72 = peg$classExpectation([["0", "9"], "-", "+", "(", ")", "*"], false, false),
      peg$c73 = function(digits) { return [digits.join('')]; },
      peg$c74 = "#+",
      peg$c75 = peg$literalExpectation("#+", false),
      peg$c76 = /^[.?!\/;:,]/,
      peg$c77 = peg$classExpectation([".", "?", "!", "/", ";", ":", ","], false, false),
      peg$c78 = function(p) { return ["#" + p.join('')]; },
      peg$c79 = "#",
      peg$c80 = peg$literalExpectation("#", false),
      peg$c81 = "+",
      peg$c82 = peg$literalExpectation("+", false),
      peg$c83 = /^[.!?,;:]/,
      peg$c84 = peg$classExpectation([".", "!", "?", ",", ";", ":"], false, false),
      peg$c85 = function(pct) { return ['#' + pct.join('')]; },
      peg$c86 = /^[.!?]/,
      peg$c87 = peg$classExpectation([".", "!", "?"], false, false),
      peg$c88 = function(pct) { return ['#'+pct]; },
      peg$c89 = /^[,;:]/,
      peg$c90 = peg$classExpectation([",", ";", ":"], false, false),
      peg$c91 = /^[ \t\r\n]/,
      peg$c92 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false),
      peg$c93 = /^[#$&\xB0\xA7=*]/,
      peg$c94 = peg$classExpectation(["#", "$", "&", "\xB0", "\xA7", "=", "*"], false, false),
      peg$c95 = function(oth) { return ['_'+oth+'_']; },
      peg$c96 = /^[a-z\xE0\xE2\xE4\xE9\xE8\xEA\xEB\xE7\xEF\xEE\xF4\xF6\xF9\xFC\xFB_(){}\/\\@]/,
      peg$c97 = peg$classExpectation([["a", "z"], "\xE0", "\xE2", "\xE4", "\xE9", "\xE8", "\xEA", "\xEB", "\xE7", "\xEF", "\xEE", "\xF4", "\xF6", "\xF9", "\xFC", "\xFB", "_", "(", ")", "{", "}", "/", "\\", "@"], false, false),
      peg$c98 = /^[A-Z\xC0\xC2\xC4\xC9\xC8\xCB\xCA\xC7\xCF\xCE\xD6\xD4\xDA\xDC\xDB_(){}\/\\@]/,
      peg$c99 = peg$classExpectation([["A", "Z"], "\xC0", "\xC2", "\xC4", "\xC9", "\xC8", "\xCB", "\xCA", "\xC7", "\xCF", "\xCE", "\xD6", "\xD4", "\xDA", "\xDC", "\xDB", "_", "(", ")", "{", "}", "/", "\\", "@"], false, false),
      peg$c100 = /^[iy\u0268\u0289\u026Fu\u026A\u028F\u028Ae\xF8\u0259\u0258\u0275\u0264o\u025B\u0153\u025C\u025E\u028C\u0254\xE6\u0250a\u0276\u0251\u0252\u025A\u025D]/,
      peg$c101 = peg$classExpectation(["i", "y", "\u0268", "\u0289", "\u026F", "u", "\u026A", "\u028F", "\u028A", "e", "\xF8", "\u0259", "\u0258", "\u0275", "\u0264", "o", "\u025B", "\u0153", "\u025C", "\u025E", "\u028C", "\u0254", "\xE6", "\u0250", "a", "\u0276", "\u0251", "\u0252", "\u025A", "\u025D"], false, false),
      peg$c102 = /^[\u1EBD\xF8\u0303\u025B\u0303\xF5\u0254\u0303\xE3\u0251\u0303]/,
      peg$c103 = peg$classExpectation(["\u1EBD", "\xF8", "\u0303", "\u025B", "\u0303", "\xF5", "\u0254", "\u0303", "\xE3", "\u0251", "\u0303"], false, false),
      peg$c104 = /^[pbdt\u0288\u0256c\u025Fk\u0261q\u0262\u0294m\u0271\u0273\u0272\u014B\u0274\u0299r\u027D\u0280\u2C71\u027E\u0278\u03B2fv\u03B8\xF0sz\u0283\u0292\u0282\u0290\xE7\u029Dx\u0263\u03C7\u0281\u0127\u0295h\u026C\u026E\u028B\u0279\u027Bj\u0270l\u026D\u028E\u029F]/,
      peg$c105 = peg$classExpectation(["p", "b", "d", "t", "\u0288", "\u0256", "c", "\u025F", "k", "\u0261", "q", "\u0262", "\u0294", "m", "\u0271", "\u0273", "\u0272", "\u014B", "\u0274", "\u0299", "r", "\u027D", "\u0280", "\u2C71", "\u027E", "\u0278", "\u03B2", "f", "v", "\u03B8", "\xF0", "s", "z", "\u0283", "\u0292", "\u0282", "\u0290", "\xE7", "\u029D", "x", "\u0263", "\u03C7", "\u0281", "\u0127", "\u0295", "h", "\u026C", "\u026E", "\u028B", "\u0279", "\u027B", "j", "\u0270", "l", "\u026D", "\u028E", "\u029F"], false, false),
      peg$c106 = /^[\-+]/,
      peg$c107 = peg$classExpectation(["-", "+"], false, false),
      peg$c108 = /^[\-+']/,
      peg$c109 = peg$classExpectation(["-", "+", "'"], false, false),
      peg$c110 = /^[<>]/,
      peg$c111 = peg$classExpectation(["<", ">"], false, false),
      peg$c112 = /^[0-9#$&\xB0\xA7=*(){}\/\\@.!?:;'," \t\r\n]/,
      peg$c113 = peg$classExpectation([["0", "9"], "#", "$", "&", "\xB0", "\xA7", "=", "*", "(", ")", "{", "}", "/", "\\", "@", ".", "!", "?", ":", ";", "'", ",", "\"", " ", "\t", "\r", "\n"], false, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseutterance() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseub();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseub();
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsemarkinit();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseub();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseub();
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = [];
        s2 = peg$parseub();
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parseub();
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parseendponctu();
          if (s2 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c1(s1, s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parsemarkinit();
          if (s1 !== peg$FAILED) {
            s2 = [];
            s3 = peg$parseub();
            while (s3 !== peg$FAILED) {
              s2.push(s3);
              s3 = peg$parseub();
            }
            if (s2 !== peg$FAILED) {
              s3 = peg$parseendponctu();
              if (s3 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c1(s2, s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        }
      }
    }

    return s0;
  }

  function peg$parseub() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseu();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseblank();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseu();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseu() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsecrochet();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c2(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsechevron();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseponctu();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c3(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.substr(peg$currPos, 11) === peg$c4) {
            s1 = peg$c4;
            peg$currPos += 11;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c5); }
          }
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c6();
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            if (input.substr(peg$currPos, 11) === peg$c7) {
              s1 = peg$c7;
              peg$currPos += 11;
            } else {
              s1 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c8); }
            }
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c9();
            }
            s0 = s1;
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              if (input.substr(peg$currPos, 7) === peg$c10) {
                s1 = peg$c10;
                peg$currPos += 7;
              } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c11); }
              }
              if (s1 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c12();
              }
              s0 = s1;
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                s1 = peg$parsemotnombre();
                if (s1 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c13(s1);
                }
                s0 = s1;
                if (s0 === peg$FAILED) {
                  s0 = peg$currPos;
                  s1 = peg$parsemotmaj();
                  if (s1 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c13(s1);
                  }
                  s0 = s1;
                  if (s0 === peg$FAILED) {
                    s0 = peg$currPos;
                    s1 = peg$parsemot();
                    if (s1 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c13(s1);
                    }
                    s0 = s1;
                    if (s0 === peg$FAILED) {
                      s0 = peg$currPos;
                      s1 = peg$parsenombre();
                      if (s1 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c14(s1);
                      }
                      s0 = s1;
                      if (s0 === peg$FAILED) {
                        s0 = peg$parseblank();
                        if (s0 === peg$FAILED) {
                          s0 = peg$currPos;
                          s1 = peg$parseothers();
                          if (s1 !== peg$FAILED) {
                            peg$savedPos = s0;
                            s1 = peg$c15(s1);
                          }
                          s0 = s1;
                          if (s0 === peg$FAILED) {
                            s0 = peg$currPos;
                            s1 = peg$parsegroupin();
                            if (s1 !== peg$FAILED) {
                              peg$savedPos = s0;
                              s1 = peg$c16(s1);
                            }
                            s0 = s1;
                            if (s0 === peg$FAILED) {
                              s0 = peg$currPos;
                              s1 = peg$parsegroupout();
                              if (s1 !== peg$FAILED) {
                                peg$savedPos = s0;
                                s1 = peg$c16(s1);
                              }
                              s0 = s1;
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parsemarkinit() {
    var s0;

    if (input.substr(peg$currPos, 2) === peg$c17) {
      s0 = peg$c17;
      peg$currPos += 2;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c18); }
    }
    if (s0 === peg$FAILED) {
      if (input.substr(peg$currPos, 2) === peg$c19) {
        s0 = peg$c19;
        peg$currPos += 2;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c20); }
      }
      if (s0 === peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c21) {
          s0 = peg$c21;
          peg$currPos += 2;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c22); }
        }
        if (s0 === peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c17) {
            s0 = peg$c17;
            peg$currPos += 2;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c18); }
          }
        }
      }
    }

    return s0;
  }

  function peg$parsecrochet() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 91) {
      s1 = peg$c23;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c24); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsetoutsymb();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsetoutsymb();
      }
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 93) {
          s3 = peg$c25;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c26); }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c27(s1, s2, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 10214) {
        s1 = peg$c28;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c29); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsetoutsymb();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsetoutsymb();
        }
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 10215) {
            s3 = peg$c30;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c31); }
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c27(s1, s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 8261) {
          s1 = peg$c32;
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c33); }
        }
        if (s1 !== peg$FAILED) {
          s2 = [];
          s3 = peg$parsetoutsymb();
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parsetoutsymb();
          }
          if (s2 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 8262) {
              s3 = peg$c34;
              peg$currPos++;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c35); }
            }
            if (s3 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c27(s1, s2, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 8988) {
            s1 = peg$c36;
            peg$currPos++;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c37); }
          }
          if (s1 !== peg$FAILED) {
            s2 = [];
            s3 = peg$parsetoutsymb();
            while (s3 !== peg$FAILED) {
              s2.push(s3);
              s3 = peg$parsetoutsymb();
            }
            if (s2 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 8991) {
                s3 = peg$c38;
                peg$currPos++;
              } else {
                s3 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c39); }
              }
              if (s3 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c27(s1, s2, s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        }
      }
    }

    return s0;
  }

  function peg$parsechevron() {
    var s0, s1, s2, s3;
